--- a/aula_PA_1C/04_08.ipynb
+++ b/aula_PA_1C/04_08.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQaO2JiotakGIBlDP7yl/D",
+      "authorship_tag": "ABX9TyNSEbFw0DE+xoO3ZPu2QCwz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -185,6 +185,79 @@
           },
           "metadata": {},
           "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nome = input(\"Seu nome:\")\n",
+        "\n",
+        "name = name.upper()\n",
+        "print(name)\n",
+        "\n",
+        "txt = txt.lower()\n",
+        "print(txt)\n",
+        "\n",
+        "txt = txt.replace(\" \", \"\")\n",
+        "print(len(txt))\n",
+        "\n",
+        "primeiro_nome = nome.split()[0]\n",
+        "print(len(primeiro_nome))\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I4wea2Asi-7z",
+        "outputId": "4fa26e81-d02f-4f7f-8d96-332ee5a101c4"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Seu nome:henrique batista\n",
+            "HENRIQUEBATISTA\n",
+            "henriquebatista\n",
+            "15\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string = input(\"Digite uma palavra: \")\n",
+        "vogais = 0\n",
+        "for i in string:\n",
+        "      if(i == 'a' or i == 'e' or i == 'i' or i == 'o' or i == 'u'):\n",
+        "            vogais = vogais + 1\n",
+        "\n",
+        "print(\"A palavra digitada possui\", vogais, \"vogais\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1CDHQ6a_oukQ",
+        "outputId": "765712e9-598c-4107-e975-b7c9e0f86fba"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite uma palavra: nigga\n",
+            "A palavra digitada possui 2 vogais\n"
+          ]
         }
       ]
     }
