--- a/aula_PA_1C/atividade_11_08.ipynb
+++ b/aula_PA_1C/atividade_11_08.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRMXJJEsI8L29SuRacjUWN",
+      "authorship_tag": "ABX9TyPJrADDXfn7HzAlWrIjassw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       },
       "outputs": [],
       "source": [
-        "#1\n",
+        "# Exercício 1 inserir os seus dados acima em variáveis\n",
         "nome = \"Henrique Batista\"\n",
         "turma = \"Manhã\""
       ]
@@ -52,7 +52,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#2\n",
+        "# Exercício 2 -Apos inserir dados acima usando o slicing (exemplo no notebook de manipulação de Strings), imprima na tela apenas seu sobrenome\n",
         "print(nome[8::])"
       ],
       "metadata": {
@@ -76,7 +76,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#3\n",
+        "# Exercício 3 -  imprima seu nome de trás pra frente\n",
         "print(nome[::-1])"
       ],
       "metadata": {
@@ -100,7 +100,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#4\n",
+        "\n",
+        "# Exercício 4 - pegue a frase abaixo, aplique o split para fazer uma quebra toda vez que encontrar uma \",\"\n",
         "frase = \"Python é a linguagem ideal para o primeiro contato com programação, além da sua sintaxe simples e muito poderosa, Python tem diversas aplicações como: desenvolvimento web, análise de dados, inteligência artificial e automatização de tarefas, neste curso você aprenderá a lógica de programação para conquistar fluência na linguagem, a comunidade Python é a que mais cresce, assim como sua demanda de profissionais no mercado.\"\n",
         "frase.split(',')"
       ],
@@ -135,7 +136,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#5\n",
+        "# Exercício 5 -Imprima na tela os números de 1 a 10. Use uma lista para armazenar os números.\n",
         "for i in range (1,11):\n",
         "  print(i)"
       ],
@@ -169,7 +170,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#6\n",
+        "# Exercício 6 - Crie uma lista de 5 objetos e imprima na tela\n",
         "objetos = [\"tesoura\", \"faca\", \"caderno\", \"blusa\", \"copo\"]"
       ],
       "metadata": {
@@ -204,7 +205,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#7\n",
+        "# Exercício 7 - - Crie duas strings e concatene as duas em uma terceira string\n",
         "a = \"Henrique \"\n",
         "b = \"Batista\"\n",
         "c = a + b\n",
@@ -231,7 +232,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#8\n",
+        "# Exercício 8 - Crie uma tupla com os seguintes elementos: 1, 2, 2, 3, 4, 4, 4, 5 e depois utilize a função count do\n",
+        "# objeto tupla para verificar quantas vezes o número 4 aparece na tupla\n",
         "tupla = (1, 2, 2, 3, 4, 4, 4, 5)\n",
         "\n",
         "tupla.count(4)\n",
@@ -261,7 +263,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#9\n",
+        "# Exercício 9 - Crie um dicionário vazio e imprima na tela\n",
         "meudicionario = {\n",
         "\n",
         "}"
@@ -275,7 +277,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#10\n",
+        "# Exercício 10 - Crie um dicionário com 3 chaves e 3 valores e imprima na tela\n",
         "meudicionario = {\n",
         "    \"nome\": \"Henrique\",\n",
         "    \"idade\": 16,\n",
@@ -305,7 +307,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#11\n",
+        "# Exercício 11 - Adicione mais um elemento ao dicionário criado no exercício anterior e imprima na tela\n",
         "meudicionario [\"Time\"]=\"Corinthians\"\n",
         "\n"
       ],
@@ -341,7 +343,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#12\n",
+        "# Exercício 12 - Crie um dicionário com 3 chaves e 3 valores. Um dos valores deve ser uma lista de 2 elementos numéricos.\n",
+        "# Imprima o dicionário na tela.\n",
         "dicionario = {\n",
         "    \"nome\": \"Henrique\",\n",
         "    \"idade\": 16,\n",
@@ -371,7 +374,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#13\n",
+        "# Exercício 13 - Crie uma lista de 4 elementos. O primeiro elemento deve ser uma string,\n",
+        "# o segundo uma tupla de 2 elementos, o terceiro um dcionário com 2 chaves e 2 valores e\n",
+        "# o quarto elemento um valor do tipo float.\n",
+        "# Imprima a lista na tela.\n",
         "minhalista = [\n",
         "    \"Olá\",\n",
         "    (10, 20),\n",
@@ -402,7 +408,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#14\n",
+        "# Exercício 14 - Considere a string abaixo. Imprima na tela apenas os caracteres da posição 1 a 18.\n",
         "frase = 'Cientista de Dados é o profissional mais legal do século XXI'\n",
         "\n",
         "print(frase[1:18])"
